--- a/.github/workflows/steam-workshop-upload.yml
+++ b/.github/workflows/steam-workshop-upload.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch: {}
 jobs:
   workshopUpload:
+    environment: steam
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged)
     steps:
@@ -15,7 +16,7 @@ jobs:
       - name: Create build folder and copy files
         run: mkdir build && git ls-files | xargs -I {} rsync --relative {} build/
       - name: Push to Steam Workshop
-        uses: game-ci/steam-deploy@v3
+        uses: m00nl1ght-dev/steam-workshop-deploy@v1
         with:
           username: ${{ secrets.STEAM_USERNAME }}
           configVdf: ${{ secrets.STEAM_CONFIG_VDF }}
